# RasterVoronoiPacking

./: .gitignore  CMakeLists.txt  colormap.cpp  colormap.h  glsweightviewerdialog.cpp  glsweightviewerdialog.h  glsweightviewerdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  overlapmap.cpp  overlapmap.h  packingproblem.cpp  packingproblem.h  packingviewer.ui  resources.qrc  runconfigurationsdialog.cpp  runconfigurationsdialog.h  runconfigurationsdialog.ui  voronoimountain.h  zoomedmapviewdialog.cpp  zoomedmapviewdialog.h  zoomedmapviewdialog.ui
PuzzleConverter/: CMakeLists.txt  convexDecomposition.cpp  main.cpp  parametersParser.cpp  parametersParser.h  rasterization.cpp
PuzzleConverter/matlab/: readOpFile.m
PuzzleConverter/polydecomp-keil/: config.cpp  config.h  edge.h  line.cpp  line.h  point.cpp  point.h  polygon.cpp  polygon.h  ray.h
RasterVoronoiBatchExecutor/: CMakeLists.txt  main.cpp  packingParametersParser.cpp  packingParametersParser.h
RasterVoronoiPacking/: CMakeLists.txt
RasterVoronoiPacking/RasterVoronoiPackingConsole/: CMakeLists.txt  consolepackingloader.cpp  consolepackingloader.h  mainConsole.cpp  mainCudaTest.cu  mainIncrementalTest.cpp  packingParametersParser.cpp  packingParametersParser.h
RasterVoronoiPacking/RasterVoronoiPackingGUI/: CMakeLists.txt  colormap.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  packingviewer.ui  runconfigurationsdialog.cpp  runconfigurationsdialog.h  runconfigurationsdialog.ui  zoomedmapviewdialog.cpp  zoomedmapviewdialog.h  zoomedmapviewdialog.ui
RasterVoronoiPacking/RasterVoronoiPackingGUI/viewer/: graphicsindexedrectitem.h  packingitem.cpp  packingitem.h  packingviewer.cpp  packingviewer.h  weightviewer.h  zoomedmapview.cpp  zoomedmapview.h
RasterVoronoiPacking/common/: colormap.cpp  colormap.h  packingproblem.cpp  packingproblem.h
RasterVoronoiPacking/common/cuda/: glsweightsetcuda.cu  glsweightsetcuda.h  gpuinfo.cu  gpuinfo.h  rasteroverlapevaluatorcudafull.cu  rasteroverlapevaluatorcudafull.h  rasteroverlapevaluatorcudagls.cu  rasteroverlapevaluatorcudagls.h  rasteroverlapevaluatorcudainc.cu  rasteroverlapevaluatorcudainc.h  rasteroverlapevaluatorcudamatrixgls.cu  rasteroverlapevaluatorcudamatrixgls.h  rasteroverlapevaluatormatrixgls.cu  rasterpackingcudaproblem.cu  rasterpackingcudaproblem.h  totaloverlapmapcachecuda.cpp  totaloverlapmapcachecuda.h  totaloverlapmapcuda.cu  totaloverlapmapcuda.h  totaloverlapmatrix.cu  totaloverlapmatrixcuda.cu  totaloverlapmatrixcuda.h
RasterVoronoiPacking/common/raster/: glsweightset.cpp  glsweightset.h  packing2dthread.cpp  packing2dthread.h  packingclusterthread.cpp  packingclusterthread.h  packingthread.cpp  packingthread.h  rasternofitpolygon.cpp  rasternofitpolygon.h  rasteroverlapevaluator.cpp  rasteroverlapevaluator.h  rasteroverlapevaluatordoublegls.cpp  rasteroverlapevaluatorfull.cpp  rasteroverlapevaluatorfull.h  rasteroverlapevaluatorgls.cpp  rasteroverlapevaluatorincremental.cpp  rasteroverlapevaluatorincremental.h  rasteroverlapevaluatormatrixgls.cpp  rasteroverlapevaluatormatrixgls.cu  rasteroverlapevaluatormatrixgls.h  rasterpackingproblem.cpp  rasterpackingproblem.cu  rasterpackingproblem.h  rasterpackingsolution.cpp  rasterpackingsolution.h  rasterrectpackingcompactor.cpp  rasterrectpackingcompactor.h  rastersquarepackingcompactor.cpp  rastersquarepackingcompactor.h  rasterstrippackingcompactor.cpp  rasterstrippackingcompactor.h  rasterstrippackingparameters.h  rasterstrippackingsolver.cpp  rasterstrippackingsolver.h  rasterstrippackingsolver2d.cpp  rasterstrippackingsolverdoublegls.cpp  rasterstrippackingsolverdoublegls.h  rasterstrippackingsolvergls.cpp  rasterstrippackingsolvergls.h  (+8 more)
RasterVoronoiPreProcessor/: CMakeLists.txt  PackingProblem.cpp  PackingProblem.h  main.cpp  parametersParser.cpp  parametersParser.h  rasterization.cpp
RasterVoronoiPreProcessor/annealing/: problemInstance.cpp  problemInstance.h
RasterVoronoiPreProcessor/cluster/: clusterizator.cpp  clusterizator.h
RasterVoronoiPreProcessor/dt/: dt.h  imconv.h
RasterVoronoiPreProcessor/matlab/: loadNofitPolygons.m  plotNfp.m  preProcessProblem.m  rasterizeNfp.m
RasterVoronoiPreProcessor/polybool/: pbarea.h
cmake_modules/: FindCXX11.cmake
cmake_modules/cmake_cxx11/: CheckCXX11Features.cmake~
console/: mainConsole.cpp  packingParametersParser.h
img/: Thumbs.db
raster/: glsweightset.cpp  glsweightset.h  packingthread.cpp  packingthread.h  rasterinnerfitpolygon.cpp  rasterinnerfitpolygon.h  rasternofitpolygon.cpp  rasternofitpolygon.h  rasterpackingproblem.cpp  rasterpackingproblem.h  rasterpackingsolution.cpp  rasterpackingsolution.h  rasterstrippackingsolver.cpp  rasterstrippackingsolver.h  totaloverlapmap.cpp  totaloverlapmap.h
viewer/: graphicsindexedrectitem.cpp  graphicsindexedrectitem.h  packingitem.cpp  packingitem.h  packingviewer.cpp  packingviewer.h  weightviewer.cpp  weightviewer.h  zoomedmapview.cpp  zoomedmapview.h
